Fixed loading spinner not showing on initial load

--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,7 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-body">
-                <div id="download-select" class="htmx-indicator"></div>
+                <div id="download-select" class="htmx-indicator spinner-border"></div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
